--- a/config.yaml
+++ b/config.yaml
@@ -37,3 +37,11 @@ duckduckgo:
 brave:
   rate_requests: 4
   rate_burst: 2
+
+sogou:
+  rate_requests: 4
+  rate_burst: 2
+
+brave:
+  rate_requests: 4
+  rate_burst: 2
